--- a/mobile.html
+++ b/mobile.html
@@ -676,11 +676,11 @@
         <h3 class="panel-title">Account Information</h3>
         <div class="list-item">
           <span style="color:var(--muted)">Name</span>
-          <strong>Bill</strong>
+          <strong>Yusuf</strong>
         </div>
         <div class="list-item">
           <span style="color:var(--muted)">Email</span>
-          <strong>bill@example.com</strong>
+          <strong>yusuf@example.com</strong>
         </div>
         <div class="list-item">
           <span style="color:var(--muted)">Phone</span>
@@ -688,7 +688,7 @@
         </div>
         <div class="list-item">
           <span style="color:var(--muted)">Loyalty Points</span>
-          <strong style="color:var(--primary)">420 pts</strong>
+          <strong style="color:var(--primary)">420 Points</strong>
         </div>
       </div>
 
